# alkuaanet

./: .gitignore  LICENSE  README.md  alembic.ini  build_layers.py  cli.py  dump_db_v2.py  generate_superuser_token.py  log_testing.py  migrate_v2.py  opus_testing.py  pyproject.toml  requirements.txt  run_bot.py  run_bot_forever.py  set_ssm_parameters.py  set_webhook.py
backend/: Dockerfile  crud.py  database.py  dependencies.py  lambda_handler.py  log_config.yaml  main.py  models.py  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 0fff1f89cda3_song_create_and_update_times.py  261e1eff7e6c_initial_revision.py
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/app/odata/: filter_parser.py  grammar.lark
backend/app/routers/: collections.py  composers.py  songs.py
backend/app/synth/: __init__.py  notes.py  synth.py  writers.py
backend/app/tests/: conftest.py  test_notes.py
backend/app/tests/api/: test_main.py  test_songs.py
backend/app/tests/crud/: test_collection.py  (+2 more)
backend/routers/: collections.py  composers.py  songs.py
backend/synth/: notes.py  synth.py  writers.py
etl-tools/: README.md  core.py  dump.py  dump_db_v1.py  dump_db_v2.py  extract.py  load.py  migrate_v2.py  stats.py  transform.py
frontend/: package-lock.json
frontend/src/: App.js  hooks.js  index.js
frontend/src/components/: AddComposerForm.js  Collection.js  CollectionForm.js  CollectionList.js  Composer.js  ComposerForm.js  ComposerList.js  Song.js  SongForm.js  SongList.js
frontend/src/services/: collections.js  composers.js  songs.js
graph/: README.md  cli.py  cli2.py  crud.py  lambda_function.py  schema.py
graph/lib/: auth.py  crud.py  db.py  dynamodb.py  hankkari.py  models.py  opus.py  schema.py  schema2.py
graph/lib/crud2/: __init__.py  base.py  collection.py  composer.py  opus.py  song.py
infra/: .gitignore  .terraform.lock.hcl  dynamo.tf  graph_api_lambda.tf  graph_api_lambda_layer.tf  lambda.tf  lambda_layer.tf  synth_resources.tf  tf_config.tf  tg_bot_lambda.tf  tg_bot_lambda_layer.tf
synth/: lambda_handler.py
synth/app/synth/: __init__.py  synth.py  writers.py
synth/app/tests/: test_notes.py
telegram/: app.py  bot_handlers.py  lambda_function.py  main.py  new_bot.py  run_dev_bot.py  service.py  test.py
telegram/lib/: bot.py  main.py  service.py  tg.py
(+1 files in other folders)
