[project]
authors = [
    {name = "Simo Hellgrén", email = "hellgrensimo@gmail.com"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.13"
name = "alkuaanet"
version = "0.1.0"
description = ""
readme = "README.md"
dependencies = []

[project.optional-dependencies]
telegram = [
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "types-boto3[lambda,ssm]>=1.36.21",
]

graph = [
    "cryptography>=44.0.0",
    "mangum<1.0,>=0.19",
    "pydantic<3.0.0,>=2.10.4",
    "strawberry-graphql[asgi]>=0.258.0",
]

[dependency-groups]
dev = [
    "pytest<8.0.0,>=7.4.0",
    "black<24.0.0,>=23.7.0",
    "flake8<7.0.0,>=6.1.0",
    "boto3<2.0.0,>=1.28.66",
    "uvicorn<1.0.0,>=0.23.2",
    "python-dotenv<2.0.0,>=1.0.0",
    "click<9.0.0,>=8.1.8",
    "mypy>=1.15.0",
    "requests>=2.32.3",
]


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D10", # docstrings
    "D4", # docstring styles
]
